bedrock-stage/deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: bedrock-stage
    type: web
  name: bedrock-stage-web
  namespace: bedrock-stage
spec:
  replicas: 5
  selector:
    matchLabels:
      app: bedrock-stage
      type: web
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: bedrock-stage
        type: web
      name: bedrock-stage-web
      namespace: bedrock-stage
    spec:
      containers:
      - args:
        - ./bin/run.sh
        command:
        - /bin/bash
        - -c
        image: mozorg/bedrock:prod-75fa4f5dcc9fbeae7630adb470c3166e8cc197e7
        imagePullPolicy: IfNotPresent
        name: bedrock-stage-web
        ports:
          - containerPort: 8000
        readinessProbe:
          failureThreshold: 1
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 5
          httpGet:
            path: /readiness/
            scheme: HTTP
            port: 8000
        resources:
          limits:
            cpu: 500m
            memory: 300Mi
          requests:
            cpu: 250m
            memory: 120Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
