bedrock-stage/git-sync-operator.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: bedrock-stage-git-sync-operator
  namespace: bedrock-stage
  labels:
    app: bedrock-stage-git-sync-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bedrock-stage-git-sync-operator
  template:
    metadata:
      labels:
        app: bedrock-stage-git-sync-operator
    spec:
      serviceAccountName: bedrock-stage-git-sync-operator
      containers:
      - image: mozmeao/git-sync-operator:a36881f
        name: git-sync-operator
