bedrock-stage/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bedrock-stage
  name: bedrock-stage-nodeport
  namespace: bedrock-stage
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: bedrock-stage
    type: web
  sessionAffinity: None
  type: NodePort
